--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Variant-organizer",
+  "name": "variant-organizer",
   "version": "1.0.0",
-  "description": "Your Figma Plugin",
+  "description": "A powerful Figma plugin that automatically organizes component variants into structured, easy-to-read tables. Perfect for design systems and component libraries.",
   "main": "code.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -9,8 +9,27 @@
     "lint:fix": "eslint --ext .ts,.tsx --ignore-pattern node_modules --fix .",
     "watch": "npm run build -- --watch"
   },
-  "author": "",
-  "license": "",
+  "keywords": [
+    "figma",
+    "plugin",
+    "design-system",
+    "variants",
+    "components",
+    "organization",
+    "design-tools",
+    "ui-components",
+    "component-library"
+  ],
+  "author": "Your Name <your.email@example.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/variant-organizer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/variant-organizer/issues"
+  },
+  "homepage": "https://github.com/yourusername/variant-organizer#readme",
   "devDependencies": {
     "@figma/eslint-plugin-figma-plugins": "*",
     "@figma/plugin-typings": "*",
