Fix manifest.json: remove invalid permissions property, keep proposed API enabled for variables access

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "api": "1.0.0",
   "main": "code.js",
   "capabilities": [],
-  "enableProposedApi": false,
+  "enableProposedApi": true,
   "documentAccess": "dynamic-page",
   "editorType": [
     "figma",
@@ -17,5 +17,4 @@
       "none"
     ]
   }
-
 }
