Add comprehensive code documentation and comments
- Added detailed header comments explaining plugin purpose and features
- Documented all utility functions with JSDoc-style comments
- Added step-by-step comments to main functions (organizeVariants, createDarkModeVariants)
- Explained state management utilities and dark mode detection logic
- Added inline comments for complex logic sections
- Improved code readability for beginners and developers

--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,7 @@
   "capabilities": [],
   "documentAccess": "dynamic-page",
   "editorType": [
-    "figma",
-    "figjam",
-    "slides"
+    "figma"
   ],
   "ui": "ui.html",
   "networkAccess": {
