--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "tsc -p tsconfig.json",
     "lint": "eslint --ext .ts,.tsx --ignore-pattern node_modules .",
     "lint:fix": "eslint --ext .ts,.tsx --ignore-pattern node_modules --fix .",
-  "watch": "npm run build -- --watch",
-  "icons": "node scripts/export-icons.js"
+  "watch": "npm run build -- --watch"
   },
   "keywords": [
     "figma",
@@ -37,8 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
   "eslint": "^8.54.0",
-  "typescript": "^5.3.2",
-  "sharp": "^0.33.4"
+  "typescript": "^5.3.2"
   },
   "eslintConfig": {
     "extends": [
